--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ recursive-include docs *.rst Makefile *.md *.py
 include docs/templates/*.html
 include docs/templates/*.inc
 include docs/static/*
+include VERSION
