--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,15 +5,14 @@
 # Required
 version: 2
 
-# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
-  tools:
-    python: "3.9"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
+  image: latest
+
+python:
+  version: 3.9
+  install:
+    - method: setuptools
+      path: .
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
