--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,6 +31,7 @@ jobs:
         echo "PYTHONPATH=." >> $GITHUB_ENV
     - name: Lint with flake8
       run: |
+        flake8 . --version
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
