--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,4 +1,17 @@
 flake8
+flake8-bandit
+flake8-broken-line
+flake8-bugbear
+flake8-commas
+flake8-comprehensions
+flake8-debugger
+flake8-docstrings
+flake8-eradicate
+flake8-isort
+flake8-isort
 flake8-pylint
-pyserial
+flake8-quotes
+flake8-rst-docstrings
+flake8-string-format
 gpiozero
+pyserial
